feat(s3stream): clean up buffer on compaction exception (#799)
Signed-off-by: Shichao Nie <niesc@automq.com>